--- a/monolith/src/main/resources/static/index.html
+++ b/monolith/src/main/resources/static/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <p>Welcome to the ATDD Budget OK</p>
+    <p>Welcome to the ATDD Accelerator Template - Java</p>
     <nav>
         <a href="/todos">Todo Manager</a>
     </nav>
