feat: add Budget OK envelope management to monolith with static UI

--- a/monolith/src/main/resources/static/index.html
+++ b/monolith/src/main/resources/static/index.html
@@ -21,7 +21,10 @@
     <h1>Hello World!</h1>
     <p>Welcome to the ATDD Accelerator Template - Java</p>
     <nav>
-        <a href="/todos">Todo Manager</a>
+        <ul style="list-style: none; padding: 0;">
+            <li><a href="/todos">Todo Manager</a></li>
+            <li><a href="/envelopes">Budget OK - Envelope Manager</a></li>
+        </ul>
     </nav>
 </body>
 </html>
